2010-01-27  Sebastien Pouliot  <sebastien@ximian.com>

	* MethodSignature.cs: Remove MethodAttribute support and add a
	delegate based option to extend matching for more complex needs.
	* MethodSignatures.cs: Add Parse and TryParse signatures. Convert
	more complex signatures to use delegates for matching.

2010-01-17  Sebastien Pouliot  <sebastien@ximian.com>

	* StackEntryAnalysis.cs: Avoid boxing when concatenating strings

2008-12-30  Jesse Jones  <jesjones@mindspring.com>

	* StackEntryAnalysis.cs: Changed GetHashCode to use unchecked
	math.

2008-12-01  Sebastien Pouliot  <sebastien@ximian.com>

	* MethodSignature.cs: Use HasParameters

2008-11-19  Sebastien Pouliot  <sebastien@ximian.com>

	* Namespace.cs: Specify StringComparison.Ordinal when calling
	String.StartsWith.

2008-11-17  Jesse Jones  <jesjones@mindspring.com>

	* Log.cs: Added.

2008-11-13  Jesse Jones  <jesjones@mindspring.com>

	* MethodPrinter.cs: Added. Used to convert a method body into a
	string. Factored out of the CFG class.

2008-11-07  Sebastien Pouliot  <sebastien@ximian.com>

	* StackEntryAnalysis.cs: Clearly specify [Serializable] on 
	enums (self-test)

2008-10-25  Sebastien Pouliot  <sebastien@ximian.com> 

	* Namespace.cs: Renamed to NamespaceDefinition to better match Cecil
	names (and void confusing with common keyword).
	* OpCodeBitmask.cs: Add null checks in Equals(OpCodeBitmap) and
	UnionWith methods. Refactor Equals(object) wrt change.

2008-10-21  Cedric Vivier  <cedricv@neonux.com>

	* OpCodeBitmask.cs: Add public method UnionWith.
	Add FlowControlBranch and FlowControlReturn bitmasks.

2008-10-19  Sebastien Pouliot  <sebastien@ximian.com> 

	* Namespace.cs: Add helper method to check for specialized namespaces.

2008-10-17  Sebastien Pouliot  <sebastien@ximian.com> 

	* Namespace.cs: New. Helper class so we can report defects against 
	namespaces just like any other metadata object.
	* OpCodeBitmask.cs: Implement IEquatable<T>.